now visible from github.io, corrections in projects module

--- a/MyWebPage/assets/css/6_projects.css
+++ b/MyWebPage/assets/css/6_projects.css
@@ -93,24 +93,40 @@
     padding: 20px;
     border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
+
 }
 
 /* The Close Button */
-.close {
+#close1,
+#close2,
+#close3,
+#close4,
+#close5,
+#close6 {
     color: #aaa;
     float: right;
-    font-size: 28px;
+    font-size: 20px;
     font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+#close1:hover,
+#close2:hover,
+#close3:hover,
+#close4:hover,
+#close5:hover,
+#close6:hover,
+#close1:focus,
+#close2:focus,
+#close3:focus,
+#close4:focus,
+#close5:focus,
+#close6:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
 }
 
-.caption >p  {
+.caption > p  {
     text-align: justify;
-    font-size: 150%;
+    font-size: 300%;
 }
